<resources>
    <string name="app_name">TemplateMVP</string>

    <!--validation error-->
    <string name="error_invalid_email">Your user email is invalid. Please retry.</string>
    <string name="error_empty_email">Email field is empty</string>
    <string name="error_empty_username">Username field is empty</string>
    <string name="error_empty_first_name">First name field is empty</string>
    <string name="error_empty_last_name">Last name field is empty</string>
    <string name="error_empty_phone">Phone field is empty</string>
    <string name="error_empty_field">Field is empty. Please complete.</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="error_short_phone">Phone number must contain 7 digits</string>
    <string name="error_short_password">Password must contain 8 symbols</string>
    <string name="error_password_not_match">Passwords don`t match</string>
    <string name="error_api_unknown">Unknown error. Please try again later.</string>
    <string name="error_invalid_role">This user can`l login to the mobile app.</string>
    <string name="error_internal_server_error">Internal server error. Please try again later.</string>
    <string name="error_not_found">This url isn`t supported.</string>
    <string name="error_dialog_message">Some of fields have incorrect data. Please complete.</string>
    <string name="error_bad_credentials">Email or password is incorrect.</string>
    <string name="error_no_connection">No connection.</string>
    <string name="error_no_internet">No internet connectivity. Please try again next time</string>
    <string name="error_forgot_password_invalid_email">Enter a valid email address</string>
    <string name="error_no_such_user">Such email isn`t registered</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_failed_social_login">Failed! Retry sign in.</string>
    <string name="error_future_date">You can`t select future birth date!</string>
    <string name="error_logged_out">You are not logged in!</string>

    <!--api errors-->

    <!--auth fields-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone Number</string>
    <string name="repeat_password">Password Confirmation</string>
    <string name="country">Country</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="i_accept">I accept</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="select_country">Country</string>
    <string name="submit">Submit</string>
    <string name="code">Code</string>
    <string name="error">Error</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_login">Login</string>
    <string name="auth_login_with">Login with</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_or">Or</string>
    <string name="auth_sign_up_here">Sign Up here</string>
    <string name="auth_by_signing">By signing in you agree to our</string>
    <string name="auth_facebook">Facebook</string>
    <string name="auth_google">Google</string>
    <string name="auth_forgot_password_title">Forgot password</string>
    <string name="auth_fp_description">Enter your email and we will send you instructions for password reset.</string>
    <string name="auth_back_to">Back to</string>
    <string name="auth_fp_success">Instructions for password reset are sent to your email.</string>

    <!--title-->
    <string name="title_login">Login</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_registration">Registration</string>
    <string name="title_home">Home</string>

    <!--toolbar-->
    <string name="tb_done">Done</string>
    <string name="tb_cancel">Cancel</string>


</resources>
