<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/color_3">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/auth_login"
        android:textAllCaps="true"
        android:textColor="@color/color_1"
        android:textSize="@dimen/font_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/ll_terms"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/AppTheme.EditText.Error"
                app:hintEnabled="false"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/AppTheme.EditText.Error"
                app:hintEnabled="false"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toBottomOf="@+id/til_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/color_1">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ems="20"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_forgot_password"
                android:textColor="@color/color_5"
                android:textSize="@dimen/font_9"
                app:layout_constraintStart_toStartOf="@+id/til_password"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="@dimen/font_3"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/auth_by_signing"
            android:textColor="@color/color_1"
            android:textSize="@dimen/font_10" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:textColor="@color/color_5"
            android:textSize="@dimen/font_9" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="370px"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color_1"
        app:layout_constraintBottom_toTopOf="@+id/ll_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/auth_or"
            android:textColor="@color/color_1"
            android:textSize="@dimen/font_10" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_sign_up_here"
            android:textColor="@color/color_5"
            android:textSize="@dimen/font_9" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>