<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/tb_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_gravity="left"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                android:src="@drawable/ic_arrow_back" />

            <android.support.v7.widget.AppCompatButton
                style="@style/AppTheme.ToolbarButton"
                android:id="@+id/tb_cancel"
                android:layout_gravity="left"
                android:textSize="@dimen/font_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/color_1"
                android:text="@string/tb_cancel"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/color_1"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <android.support.v7.widget.AppCompatButton
                style="@style/AppTheme.ToolbarButton"
                android:id="@+id/tb_done"
                android:layout_gravity="right"
                android:textSize="@dimen/font_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:visibility="gone"
                android:text="@string/tb_done"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

</android.support.constraint.ConstraintLayout>
